--- a/package.json
+++ b/package.json
@@ -17,10 +17,13 @@
 	"license": "MIT",
 	"dependencies": {
 		"@zeit/next-sass": "^1.0.1",
+		"axios": "^0.19.2",
 		"bootstrap": "^4.4.1",
 		"classnames": "^2.2.6",
+		"mailgun-js": "^0.22.0",
 		"next": "9.1.3",
 		"node-sass": "^4.13.1",
+		"process": "^0.11.10",
 		"react": "16.11.0",
 		"react-bootstrap": "^1.0.0-beta.17",
 		"react-dom": "16.11.0"
