--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
 		"process": "^0.11.10",
 		"react": "16.11.0",
 		"react-bootstrap": "^1.0.0-beta.17",
+		"react-cookie-consent": "^3.0.0",
 		"react-dom": "16.11.0"
 	},
 	"devDependencies": {
